feat(first draft): single card implementation

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,16 @@ body {
     text-wrap: balance;
   }
 }
+
+.name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.testimonial {
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Limits to 3 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
